--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-    <!--<![endif]-->
+<html>
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title></title>
+        <title>Code Quiz</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Bootstrap CSS -->
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+            crossorigin="anonymous"
+        />
+        <!-- Local CSS -->
         <link rel="stylesheet" href="assets/styles.css" />
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">
-                You are using an <strong>outdated</strong> browser. Please
-                <a href="#">upgrade your browser</a> to improve your experience.
-            </p>
-        <![endif]-->
-
+        <header class="row">
+            <button type="button" class="btn btn-outline-dark highscoreBtn">
+                View Highscores
+            </button>
+            <div class="timer ml-auto">
+                <h4>
+                    Time left:
+                    <span class="badge badge-secondary" id="timeLeft"></span>
+                </h4>
+            </div>
+        </header>
+        <main class="row">
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                    <h1 class="display-4 col-md-12">
+                        Intro/Questions/Complete-msg
+                    </h1>
+                    <div class="row">
+                        <p class="lead col-md-12">
+                            This will hold the instructions, then the answer
+                            cards, then the user score
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <div class="row input">
+            <button type="button" class="btn btn-danger" id="startBtn">
+                Start button (replaced by highscore submit)
+            </button>
+        </div>
         <script src="assets/script.js"></script>
+        <script src="assets/questions.js"></script>
     </body>
 </html>
