Add high scores to local storage, display on gameover, clear button

--- a/highscores.html
+++ b/highscores.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>HIGH SCORES!</h1>
+        <ul id="highScoresList"></ul>
         <script src="./assets/script.js"></script>
     </body>
 </html>
