Fixed bug with view high scores button (would not render scores without refresh)

--- a/index.html
+++ b/index.html
@@ -87,10 +87,17 @@
                     <ul id="highScoresList"></ul>
                     <button
                         type="button"
-                        class="btn btn-outline-dark col-md-6"
+                        class="btn btn-outline-dark col-md-4"
                         id="clear-btn"
                     >
                         Clear High Scores
+                    </button>
+                    <button
+                        type="button"
+                        class="btn btn-outline-dark col-md-4"
+                        id="reload-btn"
+                    >
+                        Try Again!
                     </button>
                 </div>
             </div>
