Timer reduction on wrong answer working, timer=0 gameover working

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
             </div>
             <!-- Start/popup/input div -->
             <div class="row">
+                <div class="container col-md-10" id="intro">
+                    <h1>Welcome to the Code Quiz!</h1>
+                    <h4>Read each question and select the correct answer.</h4>
+                    <h4>
+                        Each correct answer will award 10 points, but each
+                        incorrect answer will reduce the timer by 10 seconds.
+                    </h4>
+                    <h4>Good luck!</h4>
+                </div>
+            </div>
+            <div class="row">
                 <div class="container col-md-10 controls" id="controls">
                     <button class="btn start-btn" id="start-btn">Start</button>
                 </div>
