Added audio cues

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                 </div>
             </div>
         </main>
+
+        <audio id="cheer" src="./assets/cheer.mp3"></audio>
+        <audio id="boo" src="./assets/boo.mp3"></audio>
         <script src="assets/script.js"></script>
     </body>
 </html>
