--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
             crossorigin="anonymous"
         />
+
         <!-- Local CSS -->
         <link rel="stylesheet" href="assets/styles.css" />
     </head>
@@ -94,7 +95,7 @@
             </div>
             <div class="row">
                 <div class="container col-md-10 hide" id="highScoresEl">
-                    <h1>HIGH SCORES!</h1>
+                    <h1>HIGH SCORES</h1>
                     <ul id="highScoresList"></ul>
                     <button
                         type="button"
@@ -108,7 +109,7 @@
                         class="btn btn-outline-dark col-md-4"
                         id="reload-btn"
                     >
-                        Try Again!
+                        Try Again
                     </button>
                 </div>
             </div>
